fix: adjust max-height of expand-slow container to prevent clipping of injection block

--- a/src/index.css
+++ b/src/index.css
@@ -213,7 +213,7 @@ input:-webkit-autofill:active {
               opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .expand-slow.open {
-  max-height: 800px;
+  max-height: 2000px;
   opacity: 1;
   transition: max-height 1.3s cubic-bezier(0.2, 0, 0.1, 1),
               opacity 0.5s cubic-bezier(0.2, 0, 0.1, 1);
